Fix for the top collapsed state of nav on initiatives view.

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -32,6 +32,9 @@
                     font-size: 24px;
                 }
             }
+            .election-office-projection-heading.initiatives {
+                font-size: 15px;
+            }            
         }
     }
     @include mobile {
